--- a/style/main.scss
+++ b/style/main.scss
@@ -1,17 +1,24 @@
 @import 'reset';
+@import 'picker';
 
 body {
-  color: rgba(255, 255, 255, 0.8);
   font-family: 'Helvetica Neue', sans-serif;
   font-weight: lighter;
-  letter-spacing: 2px;
+  // letter-spacing: 2px;
 
   overflow-y: scroll;
   height: 100%;
   height: 100vh;
   margin: 0;
+}
 
-  background: rgb(34, 48, 65);
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Open Sans';
+  font-weight: normal;
+}
+
+#app {
+  width: 50%;
 }
 
 #scene {
