--- a/style/main.scss
+++ b/style/main.scss
@@ -2,32 +2,32 @@
 @import 'picker';
 
 body {
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: 'Helvetica Neue', 'Helvetica', sans-serif;
   font-weight: lighter;
-  // letter-spacing: 2px;
 
   overflow-y: scroll;
   height: 100%;
   height: 100vh;
   margin: 0;
+
+  background: #2E343C;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Open Sans';
   font-weight: normal;
 }
 
 #app {
-  width: 50%;
+  margin: 0 auto;
 }
 
 #scene {
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 50%;
-  right: 0;
-  z-index: 0;
+  height: 450px;
+  width: 1000px;
+  margin: 40px auto;
+  display: block;
+  position: relative;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
 
   canvas {
     position: absolute;
