keep body from overflowing

--- a/style/picker.scss
+++ b/style/picker.scss
@@ -4,6 +4,10 @@
 
   color: rgba(255, 255, 255, 1);
 
+  h2 {
+    margin-bottom: 10px;
+  }
+
   section {
     display: flex;
     flex-flow: row wrap;
