--- a/style/picker.scss
+++ b/style/picker.scss
@@ -1,28 +1,33 @@
 .texturePicker {
-  display: block;
-  text-align: center;
+  width: 338px;
+  position: absolute;
+  top: 40px;
+  left: 40px;
+  padding: 10px;
 
   color: rgba(255, 255, 255, 1);
+  background: rgba(0, 0, 0, 0.6);
+  border-radius: 4px;
 
   h2 {
-    margin-bottom: 10px;
+    margin: 5px 5px 10px 5px;
+    font-size: 16px;
   }
 
   section {
     display: flex;
     flex-flow: row wrap;
-    justify-content: center;
   }
 
   .textureDisplay {
     width: 96px;
     height: 96px;
-    margin: 10px;
+    margin: 5px;
     background-size: cover;
     image-rendering: pixelated;
 
     &.active {
-      outline: 4px solid rgb(251, 189, 68);
+      box-shadow: inset 0 0 0 3px rgba(255, 255, 255, 0.55);
     }
   }
 }
